--- a/hello-ws/package.json
+++ b/hello-ws/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "hello-koa2",
-    "version": "1.0.0",
-    "description": "Hello Koa 2 example with async",
+    "name": "hello-ws",
+    "version": "0.0.1",
+    "description": "Learn to use websocket of nodejs",
     "main": "app.js",
     "scripts": {
         "start": "node hello_koa2.js"
@@ -16,8 +16,6 @@
         "type": "git"
     },
     "dependencies": {
-        "koa": "2.0.0",
-        "koa-router": "7.0.0",
-        "koa-bodyparser": "3.2.0"
+        "ws": "1.1.1"
     }
 }
